list 3rd-party directories

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,4 +19,5 @@ jobs:
       - run: rpm -ivh a.rpm
       - run: rm a.rpm
       - run: pushd ~/rpmbuild/SPECS/ && rpmbuild -bp chromium.spec && popd
+      - run: find ~/rpmbuild/BUILD -type d -name 'third_*' -exec ls -l {} \;
       - run: df
