du is somewhat useful in a different way

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,4 +20,5 @@ jobs:
       - run: rm a.rpm
       - run: pushd ~/rpmbuild/SPECS/ && rpmbuild -bp chromium.spec && popd
       - run: find ~/rpmbuild/BUILD -type d -name 'third_*' -exec ls -l {} \;
+      - run: find ~/rpmbuild/BUILD -type d -name 'third_*' -exec du {} \;
       - run: df
