without -depth one gets parent folder earlier than sub-folders

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,5 +20,5 @@ jobs:
       - run: rm a.rpm
       - run: pushd ~/rpmbuild/SPECS/ && rpmbuild -bp chromium.spec && popd
       - run: find ~/rpmbuild/BUILD -type d -name 'third_*' -print -exec ls -l {} \;
-      - run: find ~/rpmbuild/BUILD -type d -name 'third_*' -exec du {} \;
+      - run: find ~/rpmbuild/BUILD -depth -type d -name 'third_*' -exec du {} \;
       - run: df
