-bp is about 4 minutes, try saving it.
[chrome:39361/57874] CXX obj/chrome/browser/extensions/extensions/sync_storage_backend.o

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,11 +22,11 @@ jobs:
       - run: rm a.rpm
       - uses: actions/checkout@v4
       - run: patch ~/rpmbuild/SPECS/chromium.spec chromium.spec.diff
-      - run: pushd ~/rpmbuild/SPECS/ && rpmbuild -bp chromium.spec && popd
-      - run: find ~/rpmbuild/BUILD -type d -name 'third_*' -print -exec ls -l {} \;
-      - run: find ~/rpmbuild/BUILD -depth -type d -name 'third_*' -exec du {} \;
-      - run: du -s ~/rpmbuild/BUILD/chromium-*/third_party/*
-      - run: du -s ~/rpmbuild/BUILD/chromium-*/third_party/*/third_party
-      - run: du -s ~/rpmbuild/BUILD/chromium-*
-      - run: df
+#      - run: pushd ~/rpmbuild/SPECS/ && rpmbuild -bp chromium.spec && popd
+#      - run: find ~/rpmbuild/BUILD -type d -name 'third_*' -print -exec ls -l {} \;
+#      - run: find ~/rpmbuild/BUILD -depth -type d -name 'third_*' -exec du {} \;
+#      - run: du -s ~/rpmbuild/BUILD/chromium-*/third_party/*
+#      - run: du -s ~/rpmbuild/BUILD/chromium-*/third_party/*/third_party
+#      - run: du -s ~/rpmbuild/BUILD/chromium-*
+#      - run: df
       - run: pushd ~/rpmbuild/SPECS/ && rpmbuild -bc chromium.spec && popd
