--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,20 @@ jobs:
 #      - run: du -s ~/rpmbuild/BUILD/chromium-*
 #      - run: df
       - run: pushd ~/rpmbuild/SPECS/ && rpmbuild -bc chromium.spec && popd
+      - run: mkdir after after-big
+      - run: find ~/rpmbuild/BUILD/chromium-* -type f -name libskia.a -print -exec cp {} after \;
+      - run: find ~/rpmbuild/BUILD/chromium-* -type f -name libots.a -print -exec cp {} after \;
+      - run: find ~/rpmbuild/BUILD/chromium-* -type f -name libblink_platform.a -print -exec cp {} after \;
+      - run: find ~/rpmbuild/BUILD/chromium-*/out/Release/ -type f -name '*.a' -print -exec cp {} after-big \;
       - uses: actions/upload-artifact@v3
         with:
           name: before
           path: before.tgz
+      - uses: actions/upload-artifact@v3
+        with:
+          name: after
+          path: after
+      - uses: actions/upload-artifact@v3
+        with:
+          name: after-big
+          path: after-big
