--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,24 @@ on:
       - RUN*
 
 jobs:
+  fetch-source:
+    runs-on: ubuntu-latest
+    container: fedora:39
+    permissions:
+      contents: write
+    steps:
+      - run: cat /etc/os-release
+      - run: df
+      - run: dnf install -y curl dnf-utils rpm-build git
+      - uses: actions/checkout@v4
+      - run:  ./chromium-latest.py --stable --cleansources
+      - run:  ./chromium-latest.py --beta --cleansources
+      - run:  ./chromium-latest.py --dev --cleansources
+      - uses: actions/upload-artifact@v3
+#        with:
+#          name: before
+#          path: before.tgz
+
   fedora-job:
     runs-on: ubuntu-latest
     container: fedora:39
