410, migrated to https://chromiumdash.appspot.com; no longer works

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,8 @@ jobs:
       - run: dnf install -y curl dnf-utils rpm-build git
       - uses: actions/checkout@v4
 #      - run:  ./chromium-latest.py --stable --cleansources
-      - run:  ./chromium-latest.py --beta --cleansources
-      - run:  ./chromium-latest.py --dev --cleansources
+#      - run:  ./chromium-latest.py --beta --cleansources
+#      - run:  ./chromium-latest.py --dev --cleansources
       - uses: actions/upload-artifact@v3
 #        with:
 #          name: before
