--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,11 @@ jobs:
       - uses: actions/checkout@v4
       - run: ./chromium-latest.py --version 121.0.6167.47 --ffmpegclean --ffmpegarm
       - run: ls -l
+      - run: df
+      - run: rm -rf chromium-121.0.6167
+      - run: df
+      - run: rm -rf chromium-121.0.6167.tar.xz
+      - run: df
       - run: mv chromium-121.0.6167.47-clean.tar.xz ~/rpmbuild/SOURCES/
       - run: patch ~/rpmbuild/SPECS/chromium.spec chromium.spec.diff
       - run: cp 000*.patch ~/rpmbuild/SOURCES/
