--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,9 +31,32 @@ jobs:
           name: before-main
           path: before.tgz
 
+  cache-clean:
+    runs-on: ubuntu-latest
+    container: fedora:39
+    steps:
+      - uses: actions/cache@v3
+        id: cache-chromium-clean
+        with:
+          path: |
+            chromium-121.0.6167.47-clean.tar.xz
+          key: chromium-121.0.6167.47
+      - uses: actions/checkout@v4
+      - name: Build cache
+        if: ${{ steps.cache-chromium-clean.outputs.cache-hit != 'true' }}
+        steps:
+          - run: ./chromium-latest.py --version 121.0.6167.47 --ffmpegclean --ffmpegarm
+          - run: ls -l
+          - run: df
+          - run: rm -rf chromium-121.0.6167.47
+          - run: df
+          - run: rm -rf chromium-121.0.6167.47.tar.xz
+          - run: df
+
   fedora-job:
     runs-on: ubuntu-latest
     container: fedora:39
+    needs: cache-clean
     permissions:
       contents: write
     steps:
@@ -48,13 +71,11 @@ jobs:
       - run: rm a.rpm
       - run: rm -f ~/rpmbuild/SOURCES/chromium-*-clean.tar.xz
       - uses: actions/checkout@v4
-      - run: ./chromium-latest.py --version 121.0.6167.47 --ffmpegclean --ffmpegarm
-      - run: ls -l
-      - run: df
-      - run: rm -rf chromium-121.0.6167.47
-      - run: df
-      - run: rm -rf chromium-121.0.6167.47.tar.xz
-      - run: df
+      - uses: actions/cache/restore@v3
+        with:
+          path: |
+            chromium-121.0.6167.47-clean.tar.xz
+          key: chromium-121.0.6167.47
       - run: mv chromium-121.0.6167.47-clean.tar.xz ~/rpmbuild/SOURCES/
       - run: patch ~/rpmbuild/SPECS/chromium.spec chromium.spec.diff
       - run: cp 000*.patch ~/rpmbuild/SOURCES/
