--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,7 @@ jobs:
       - run: rm a.rpm
       - run: rm -f ~/rpmbuild/SOURCES/chromium-*-clean.tar.xz
       - uses: actions/checkout@v4
-      - uses: actions/cache/restore@v3
+      - uses: actions/cache@v3
         id: cache-chromium-clean
         with:
           path: |
@@ -73,7 +73,7 @@ jobs:
           key: chromium-121.0.6167.47
 #          fail-on-cache-miss: true
       - run: ls -lR chromium-121.0.6167.47*
-      - run: mv chromium-121.0.6167.47-clean.tar.xz ~/rpmbuild/SOURCES/
+      - run: cp -p chromium-121.0.6167.47-clean.tar.xz ~/rpmbuild/SOURCES/
       - run: patch ~/rpmbuild/SPECS/chromium.spec chromium.spec.diff
       - run: cp 000*.patch ~/rpmbuild/SOURCES/
 #      - run: pushd ~/rpmbuild/SPECS/ && rpmbuild -bp chromium.spec && popd
