--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,7 +71,7 @@ jobs:
           path: |
             chromium-121.0.6167.47-clean.tar.xz
           key: chromium-121.0.6167.47
-#          fail-on-cache-miss: true
+          fail-on-cache-miss: true
       - run: ls -lR chromium-121.0.6167.47*
       - run: cp -p chromium-121.0.6167.47-clean.tar.xz ~/rpmbuild/SOURCES/
       - run: patch ~/rpmbuild/SPECS/chromium.spec chromium.spec.diff
