--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,8 @@ jobs:
           enableCrossOsArchive: true
       - uses: actions/checkout@v4
       - run: dnf install -y xz
-      - run: ls -lR chromium-121.0.6167.47*
+      - run: pwd
+      - run: ls -lR ../chromium-121.0.6167.47*
       - name: Build cache
         if: ${{ steps.cache-chromium-clean.outputs.cache-hit != 'true' }}
         run: ./chromium-latest.py --version 121.0.6167.47 --ffmpegclean --ffmpegarm
