--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
       - uses: actions/checkout@v4
       - run: dnf install -y xz
       - run: pwd
-      - run: ls -lR ../chromium-121.0.6167.47*
+      - run: ls -lR .
       - name: Build cache
         if: ${{ steps.cache-chromium-clean.outputs.cache-hit != 'true' }}
         run: ./chromium-latest.py --version 121.0.6167.47 --ffmpegclean --ffmpegarm
