still does not work

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,7 +67,7 @@ jobs:
       - run: rpm -ivh a.rpm
       - run: rm a.rpm
       - run: rm -f ~/rpmbuild/SOURCES/chromium-*-clean.tar.xz
-      - uses: actions/cache@v3
+      - uses: actions/cache/restore@v3
         id: cache-chromium-clean
         with:
           path: |
