--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,7 @@ jobs:
             chromium-121.0.6167.47-clean.tar.xz
           key: chromium-121.0.6167.47
           enableCrossOsArchive: true
+      - run: ls -Rl .
       - uses: actions/checkout@v4
       - run: dnf install -y xz
       - run: pwd
@@ -65,6 +66,7 @@ jobs:
           key: chromium-121.0.6167.47
           fail-on-cache-miss: true
           enableCrossOsArchive: true
+      - run: ls -Rl .
       - run: cat /etc/os-release
       - run: df
       - run: dnf install -y curl dnf-utils rpm-build
